--- a/.classpath
+++ b/.classpath
@@ -1,10 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="lib/jersey-client-1.5.jar"/>
-	<classpathentry kind="lib" path="lib/jersey-core-1.5.jar"/>
-	<classpathentry kind="lib" path="lib/primefaces-2.2.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6">
+		<attributes>
+			<attribute name="owner.project.facets" value="java"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="src" path=".apt_generated">
+		<attributes>
+			<attribute name="optional" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/glassfishv3/glassfish/modules/gf-client.jar"/>
 	<classpathentry kind="lib" path="C:/glassfishv3/glassfish/modules/javax.ejb.jar"/>
 	<classpathentry kind="lib" path="C:/glassfishv3/glassfish/modules/javax.enterprise.deploy.jar"/>
 	<classpathentry kind="lib" path="C:/glassfishv3/glassfish/modules/javax.jms.jar"/>
@@ -17,11 +24,5 @@
 	<classpathentry kind="lib" path="C:/glassfishv3/glassfish/modules/javax.servlet.jsp.jar"/>
 	<classpathentry kind="lib" path="C:/glassfishv3/glassfish/modules/javax.servlet.jsp.jstl.jar"/>
 	<classpathentry kind="lib" path="C:/glassfishv3/glassfish/modules/javax.transaction.jar"/>
-	<classpathentry kind="lib" path="C:/glassfishv3/glassfish/modules/gf-client.jar"/>
-	<classpathentry kind="src" path=".apt_generated">
-		<attributes>
-			<attribute name="optional" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="output" path="bin"/>
+	<classpathentry kind="output" path="build/classes"/>
 </classpath>
