--- a/.classpath
+++ b/.classpath
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6">
 		<attributes>
 			<attribute name="owner.project.facets" value="java"/>
@@ -11,6 +10,7 @@
 			<attribute name="optional" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry excluding="META-INF/|META-INF/" kind="src" path="src"/>
 	<classpathentry kind="lib" path="C:/glassfishv3/glassfish/modules/gf-client.jar"/>
 	<classpathentry kind="lib" path="C:/glassfishv3/glassfish/modules/javax.ejb.jar"/>
 	<classpathentry kind="lib" path="C:/glassfishv3/glassfish/modules/javax.enterprise.deploy.jar"/>
