--- a/.classpath
+++ b/.classpath
@@ -24,5 +24,6 @@
 	<classpathentry kind="lib" path="C:/glassfishv3/glassfish/modules/javax.servlet.jsp.jar"/>
 	<classpathentry kind="lib" path="C:/glassfishv3/glassfish/modules/javax.servlet.jsp.jstl.jar"/>
 	<classpathentry kind="lib" path="C:/glassfishv3/glassfish/modules/javax.transaction.jar"/>
+	<classpathentry kind="lib" path="C:/glassfishv3/glassfish/modules/jsf-api.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
