--- a/.classpath
+++ b/.classpath
@@ -25,5 +25,6 @@
 	<classpathentry kind="lib" path="C:/glassfishv3/glassfish/modules/javax.servlet.jsp.jstl.jar"/>
 	<classpathentry kind="lib" path="C:/glassfishv3/glassfish/modules/javax.transaction.jar"/>
 	<classpathentry kind="lib" path="C:/glassfishv3/glassfish/modules/jsf-api.jar"/>
+	<classpathentry kind="lib" path="lib/primefaces-2.2.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
