--- a/.classpath
+++ b/.classpath
@@ -26,5 +26,7 @@
 	<classpathentry kind="lib" path="C:/glassfishv3/glassfish/modules/javax.transaction.jar"/>
 	<classpathentry kind="lib" path="C:/glassfishv3/glassfish/modules/jsf-api.jar"/>
 	<classpathentry kind="lib" path="lib/primefaces-2.2.jar"/>
+	<classpathentry kind="lib" path="lib/jersey-client-1.5.jar"/>
+	<classpathentry kind="lib" path="lib/jersey-core-1.5.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
