--- a/web.xml
+++ b/web.xml
@@ -3,7 +3,8 @@
          xsi:schemaLocation="http://java.sun.com/xml/ns/javaee  
          http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
          version="2.5">
-         
+   
+   <!-- Configuration for JSF 2.0 -->      
    <servlet>
       <servlet-name>Faces Servlet</servlet-name>
       <servlet-class>javax.faces.webapp.FacesServlet</servlet-class> 
@@ -18,4 +19,23 @@
       <param-name>javax.faces.PROJECT_STAGE</param-name>
       <param-value>Development</param-value>
    </context-param>
+   
+   <!-- Configuration for JAX-RS (REST) -->
+   <servlet>
+   	<servlet-name>Jersey Web Application</servlet-name>
+   	<servlet-class>com.sun.jersey.spi.container.servlet.ServletContainer</servlet-class>
+   	
+   	<init-param>
+   		<param-name>com.sun.jersey.config.property.packages</param-name>
+   		<param-value>com.vpp.staffmanagement.rest</param-value>
+   	</init-param>
+   	
+   	<load-on-startup>1</load-on-startup>
+   </servlet>
+   
+   <servlet-mapping>
+   	<servlet-name>Jersey Web Application</servlet-name>
+   	<url-pattern>/webservice/*</url-pattern>
+   </servlet-mapping>
+   
 </web-app>
